add readbulk, change getMedia context time
